# agent-battle

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: backend.yml  frontend.yml
api/: index.py  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  graph.py  main.py  models.py
backend/tests/: conftest.py  test_api.py  test_models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  ConsolidatedChatWindow.tsx  DebateArena.tsx  DebateSettings.tsx  MessageBubble.tsx  MobileChatTabs.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useDebate.ts
frontend/src/tests/: DebateArena.test.tsx
frontend/src/types/: index.ts
